--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,8 @@
 
 
 .logoCuartel{
-    width: 9%;    
+    width: 9%;  
+
     }
 .colorNav{
     color: white;
@@ -17,6 +18,7 @@
     
     
 }
+
 
 .backNav{    
     width: 100%;
@@ -146,12 +148,91 @@ span{
      
  } 
 
-@media screen and (min-width: 576px) and (max-width:1200px) {
-    .cuartel img{ width: 700px;
+
+
+@media screen and (max-width: 884px){
+
+
+.contenedorNav{
+    width: 100%;
+    display: inline-block;
+
+}
+.navbar-brand{
+    margin: 0;
+}
+.contenedorLogo{
+    margin-left: 10px;
+    
+}
+.logoCuartel{
+    width: 40px
+}
+.tituloMain{ 
+    font-size: 3rem;
+    padding-top: 80px
+
+ }
+.contenedorListaItems{
+    padding-top: 20px;
+}
+ .tipografiaAnclas{
+    text-align: right;
+ }
+ .subtituloMain{ font-size: 1rem;
+}
+ .contenedorVideo{
+    .videoBomberos{ 
+        margin-bottom: 50px;
+        width: 70%;}
+    
+    
+}
+
+.cuartel img{ width: 700px;
     justify-content: center;
     align-items: center;
-margin-left: 90px}
+    margin-left: 90px}
+
+.backgroundFooter{
+    height: 50vh;
 }
+.footerLeftInfo{
+    justify-content: center;
+    line-height: 20px;
+}
+.tamanioIcon{
+    width: 70px;
+    
+}
+
+.redes{
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+}
+
+.contenedorFooterLogo{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+    margin-left: 0;
+    width: 100%;
+}
+
+.logoCuartelFooter{
+    width: 50px;
+    align-items: center;
+
+}
+}
+
+
+
+
 
 
     /*
