--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400&family=Hind:wght@400;700&family=Prompt:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300&display=swap');
 
 
+
+/*NAV*/
+
 .logoCuartel{
     width: 9%;  
 
@@ -13,19 +16,16 @@
     color: white !important;
     font-family: 'Hind', sans-serif;;
     font-size: 1.2rem;
-    font-weight: 400;
-   
-    
+    font-weight: 400;    
     
 }
-
 
 .backNav{    
     width: 100%;
     
 }
 
-
+/*INDEX + BACKGROUND*/
 
 .tituloMain{
     font-family: 'Hind', sans-serif;
@@ -68,6 +68,9 @@
         -webkit-box-shadow: -1px 2px 30px 11px rgba(0,0,0,0.75);
         -moz-box-shadow: -1px 2px 30px 11px rgba(0,0,0,0.75);
         } }
+
+
+/*FOOTER*/
 
 .backgroundFooter{ 
    
@@ -117,26 +120,36 @@
 
 
 
-.backMain{
-    background-color: aqua;
+/*NOSOTROS*/
+
+
+.cuartel{
+    padding-bottom: 50px;
+    padding-left: 50px;
 }
 
+
+.parrafosNosotros{
+    margin: 0;
+}
 .parrafo{
     color: rgb(255, 255, 255);
     font-family: 'Prompt', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 400;
-    padding-left: 10px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 10px;
     padding-bottom: 20px;
     padding-top: 20px;
     text-align: justify;
-    
+    margin: 0;
 }
 span{
     color: rgb(233, 74, 0);
     font-weight: 700;
 }
+
+/* TITULOS DE TODOS LOS HTML*/
 
 .titulo{ 
     text-align: center;
@@ -152,6 +165,7 @@ span{
 
 @media screen and (max-width: 884px){
 
+/*HEADER RESPONSIVE*/
 
 .contenedorNav{
     width: 100%;
@@ -168,31 +182,67 @@ span{
 .logoCuartel{
     width: 40px
 }
-.tituloMain{ 
-    font-size: 3rem;
-    padding-top: 80px
-
- }
 .contenedorListaItems{
     padding-top: 20px;
 }
  .tipografiaAnclas{
     text-align: right;
  }
+
+/*INDEX*/
+.tituloMain{ 
+    font-size: 3rem;
+    padding-top: 80px
+
+ }
+
  .subtituloMain{ font-size: 1rem;
 }
  .contenedorVideo{
     .videoBomberos{ 
         margin-bottom: 50px;
-        width: 70%;}
-    
-    
+        width: 70%;}     }
+
+/*TODOS LOS TITULOS DE LOS HTML*/
+
+.titulo{ font-size: 2rem;}
+
+
+/*NOSOTROS RESPONSIVE*/
+
+.cuartel{display: flex;
+justify-content: center;
+padding-left: 0;
+padding-right: 0;
+padding-bottom: 10px;
 }
 
-.cuartel img{ width: 700px;
+.cuartel img{ 
+    width: 350px;
     justify-content: center;
     align-items: center;
-    margin-left: 90px}
+    margin-left: 0px;
+    ;
+
+}
+
+
+
+.parrafosNosotros{
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.parrafo{
+    padding-right: 0;
+}
+
+/*FOOTER RESPOMSIVE*/
 
 .backgroundFooter{
     height: 50vh;
