--- a/css/estilos.css
+++ b/css/estilos.css
@@ -267,6 +267,15 @@ span{
     
     
 }
+
+/*GALERIA*/
+
+.tamanioCarrusel{
+    width: 60%;
+    padding-bottom: 50px;
+    margin: 0 auto;
+}
+
 @media screen and (max-width: 884px){
 
 /*HEADER RESPONSIVE*/
@@ -383,7 +392,7 @@ padding-bottom: 10px;
 
 }
 
-/*UNITE RESPONSIVE*/
+/*UNITE FORMULARIO RESPONSIVE*/
 
 .textarea{ 
     width: 100%;
@@ -417,6 +426,15 @@ padding-bottom: 10px;
     width: 70%
 }
 
+
+/*GALERIA RESPONSIVE*/
+
+.tamanioCarrusel{
+    width: 100%;
+    padding-top: 30px;
+    
+    
+}
 
 }
 
