--- a/css/estilos_backup.css
+++ b/css/estilos_backup.css
@@ -1,32 +1,46 @@
+@import "variables.scss";
+
+
 @import url('https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400&family=Hind:wght@400;700&family=Prompt:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300&display=swap');
 
 
 
 /*NAV*/
 
+
+.posicionHeader{
+    position: fixed;
+    width: 100%;
+}
 .logoCuartel{
     width: 9%;  
 
     }
-.colorNav{
-    color: white;
-}
 
-.tipografiaAnclas{
-    color: white !important;
-    font-family: 'Hind', sans-serif;;
-    font-size: 1.2rem;
-    font-weight: 400;    
-    
-}
 
 .backNav{    
     width: 100%;
+    .listaItems{
+        
+        .tipografiaAnclas{
+            color: white!important;
+            font-family: $fuente-principal;
+            font-size: 1.2rem;
+            font-weight: 400;
+            &:hover{
+                color: orange!important;
+            }    
+            
+        }
+    }
+    
     
 }
 
-/*INDEX + BACKGROUND*/
 
+
+/*INDEX + BACKGROUND*/
+/*
 .tituloMain{
     font-family: 'Hind', sans-serif;
     font-size: 7rem;
@@ -46,7 +60,7 @@
     font-weight: 700;
     text-align: center;
         
-    }
+    }*/
 
 .backgroundMain{
     background-image:url(../assets/img/fondoBombero.jpg); 
@@ -55,6 +69,26 @@
     background-position: center;
     z-index: -10;
     background-attachment: fixed;
+    .tituloMain{
+        font-family: 'Hind', sans-serif;
+        font-size: 7rem;
+        font-weight: 700;
+        color: white;
+        margin-bottom: 10px;
+        text-align: center;
+        padding-top: 200px;
+        
+        }
+    
+    .subtituloMain{
+        font-family: 'Hind', sans-serif;
+        font-size: 4rem;
+        color: white;
+        margin-top: 10px;
+        font-weight: 700;
+        text-align: center;
+            
+        }
         
     }    
     
@@ -156,7 +190,7 @@ span{
     font-family: 'Hind', sans-serif;
     font-weight: 700;
     color: white;
-    padding-top: 40px;
+    padding-top: 120px;
     font-size: 5rem;
      
  } 
@@ -268,6 +302,7 @@ span{
     width: 60%;
     padding-bottom: 50px;
     margin: 0 auto;
+    
 }
 
 
@@ -299,7 +334,7 @@ span{
 
 /*MEDIA QUERYS*/
 
-@media screen and (max-width: 884px){
+@media screen and (min-width: 250px) and (max-width: 884px){
 
 /*HEADER RESPONSIVE*/
 
@@ -326,14 +361,18 @@ span{
  }
 
 /*INDEX*/
-.tituloMain{ 
-    font-size: 3rem;
-    padding-top: 80px
-
- }
-
- .subtituloMain{ font-size: 1rem;
+.backgroundMain{
+    .tituloMain{ 
+        font-size: 2.5rem;
+        padding-top: 80px
+    
+     }
+    
+     .subtituloMain{ font-size: 1rem;
+    }
 }
+.posicionHeader{position: relative;}
+
  .contenedorVideo{
     .videoBomberos{ 
         margin-bottom: 50px;
